@@ -21,13 +21,14 @@ import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Iterables;
 import io.micrometer.core.instrument.*;
+import jakarta.annotation.Nullable;
 import java.time.*;
 import java.util.*;
 import java.util.concurrent.atomic.*;
 import java.util.function.*;
-import java.util.stream.Collectors;
-import javax.annotation.Nullable;
-import lombok.*;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.factcast.core.*;
 import org.factcast.core.spec.FactSpec;
@@ -110,7 +111,7 @@ public class FactusImpl implements Factus {
     assertNotClosed();
     InLockedOperation.assertNotInLockedOperation();
 
-    List<Fact> facts = e.stream().map(eventConverter::toFact).collect(Collectors.toList());
+    List<Fact> facts = e.stream().map(eventConverter::toFact).toList();
     fc.publish(facts);
     return resultFn.apply(facts);
   }
@@ -173,7 +174,7 @@ public class FactusImpl implements Factus {
     FactObserver fo =
         new AbstractFactObserver(subscribedProjection, PROGRESS_INTERVAL, factusMetrics) {
 
-          FactStreamPosition lastPositionApplied = null;
+          FactStreamPosition lastPositionApplied;
 
           @Override
           public void onNextFacts(@NonNull List<Fact> elements) {
@@ -373,8 +374,8 @@ public class FactusImpl implements Factus {
 
             FactStreamPosition factStreamPosition = positionOfLastFactApplied.get();
             if (factIdToFfwdTo.isAfter(factStreamPosition)) {
-              if (projection instanceof FactStreamPositionAware) {
-                ((FactStreamPositionAware) projection).factStreamPosition(factIdToFfwdTo);
+              if (projection instanceof FactStreamPositionAware aware) {
+                aware.factStreamPosition(factIdToFfwdTo);
               }
 
               // only persist ffwd if we ever had a state or applied facts in this catchup
@@ -454,9 +455,8 @@ public class FactusImpl implements Factus {
             .orElseThrow(
                 () ->
                     new IllegalArgumentException(
-                        String.format(
-                            "Aggregate %s with id %s does not exist.",
-                            aggregateClass.getSimpleName(), id)));
+                        "Aggregate %s with id %s does not exist."
+                            .formatted(aggregateClass.getSimpleName(), id)));
     Projector<SnapshotProjection> snapshotProjectionEventApplier = ehFactory.create(fresh);
     Collection<FactSpec> specs = snapshotProjectionEventApplier.createFactSpecs();
     return new Locked<>(fc, this, fresh, new ArrayList<>(specs), factusMetrics);
